Migrate CMake files
Signed-off-by: methylDragon <methylDragon@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,9 @@ set(IGN_CMAKE_VER ${ignition-cmake3_VERSION_MAJOR})
 #============================================================================
 # Set up the project
 #============================================================================
-ign_configure_project(VERSION_SUFFIX pre1)
+ign_configure_project(
+  REPLACE_IGNITION_INCLUDE_PATH gz/rendering
+  VERSION_SUFFIX pre1)
 
 #============================================================================
 # Set project-specific options
